src/Css/App.css
@import "./Header.css";
@import "./About.css";
@import "./Projects.css";
@import "./Education.css";
@import "./Experience.css";
@import "./Extra.css";
@import "./Project.css";

main {
  color: black;
}

body {
  max-width: 100%;
  overflow-x: hidden;
}

